# crm-fastapi

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  seed.py
.github/workflows/: main.yml
app/: db.py  deps.py  exception_handlers.py  logger.py  main.py  middleware.py  models.py
app/api/: auditlog.py  auth.py  leads.py  quotations.py  roles.py  users.py
app/crud/: __init__.py  audit.py  lead.py  quotation.py  role.py  user.py
app/schema/: __init__.py  auditlog.py  auth.py  index.py  lead.py  quotation.py  user.py
app/tests/: conftest.py  test_auth.py  test_health.py  test_seed.py  test_user.py
app/tests/utils/: db.py  utils.py
app/util/: constants.py  setting.py
app/util/auth/: mfa_auth.py  token.py
app/util/email/: index.py
app/util/email/templates/: invoice_template.html
migrations/: env.py
migrations/versions/: 001fbf42cf28_make_name_of_role_and_permission_unique.py  00ab2bb03f88_add_timestamp_model.py  2339f82b7661_make_user_id_foreign_key.py  234b5f3fd0df_initial_migration.py  4b3a7d54ccf1_add_join_table_role_permissions.py  4ef5278b7744_change_audit_log_before_values_and_.py  74775b9f183c_add_lead_quotation_quotationlineitem_.py  8bb4239042dd_add_permission.py
tests/: test_main.py
